# OpenGL

./: .gitignore  README.md
光照/01_phong/: CMakeLists.txt  xmake.lua
光照/01_phong/shader/: light_cube.fs  object.fs
光照/01_phong/src/: main.cpp
光照/02_material/: CMakeLists.txt  xmake.lua
光照/02_material/shader/: object.fs
光照/02_material/src/: main.cpp
入门/01_triangle_base/: CMakeLists.txt  xmake.lua
入门/01_triangle_base/include/: Shader.h
入门/01_triangle_base/shader/: shader.fs  shader.vs
入门/01_triangle_base/src/: Shader.cpp  main.cpp
入门/02_triangle_uniform/: CMakeLists.txt  xmake.lua
入门/02_triangle_uniform/src/: main.cpp
入门/03_transformations/: CMakeLists.txt  xmake.lua
入门/03_transformations/src/: main.cpp
纹理/01_textures_base/: CMakeLists.txt  xmake.lua
纹理/01_textures_base/src/: main.cpp
纹理/02_texture_combined/: CMakeLists.txt  xmake.lua
纹理/02_texture_combined/src/: main.cpp
